--- a/src/package.json
+++ b/src/package.json
@@ -5,11 +5,28 @@
   "description": "Einkochen leicht gemacht",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "android": "start android.bat"
   },
   "keywords": [
     "ecosystem:cordova"
   ],
   "author": "RedstonePfalz",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@material/select": "^14.0.0",
+    "babel-loader": "^9.1.3",
+    "cordova-android": "^12.0.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  },
+  "cordova": {
+    "platforms": [
+      "android"
+    ]
+  },
+  "dependencies": {
+    "cordova": "^12.0.0"
+  }
 }
