--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,6 +3,6 @@
   "include-v-in-tag": true,
   "pull-request-title-pattern": "release: ${version}",
   "packages": {
-    ".": {}
+    "./src": {}
   }
 }
