--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,11 +4,11 @@ updates:
     directory: "src/"
     schedule:
       interval: "daily"
-      time: "16:00"
+      time: "16:04"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 100
     commit-message:
-      prefix: "chore(deps): "
+      prefix: "deps: "
       include: "scope"
     labels:
       - "dependencies"
