--- a/.github/workflows/init-rp.yml
+++ b/.github/workflows/init-rp.yml
@@ -8,3 +8,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: ReleasePlease
         run: "npm i release-please -g && release-please bootstrap --token=$GITHUB_TOKEN --repo-url=RedstonePfalz/Einkochen-leicht-gemacht"
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
