--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,6 +3,13 @@
   "include-v-in-tag": true,
   "pull-request-title-pattern": "release: ${version}",
   "packages": {
-    "./src": {}
-  }
+    "./src": {
+      "changelog-path": "CHANGELOG.md",
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": true,
+      "draft": false,
+      "prerelease": true
+    }
+  },
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
