--- a/src/package.json
+++ b/src/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
-    "@material/select": "^14.0.0",
+    "@material/web": "^1.0.0",
     "babel-loader": "^9.1.3",
     "cordova-android": "^12.0.1",
     "webpack": "^5.88.2",
