--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,11 +2,10 @@
   "include-component-in-tag": false,
   "include-v-in-tag": true,
   "pull-request-title-pattern": "release: ${version}",
+  "release-type": "node",
   "packages": {
     "./src": {
       "changelog-path": "CHANGELOG.md",
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
       "draft": false,
       "prerelease": true
     }
