--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@material/web": "^1.0.0",
     "babel-loader": "^9.1.3",
     "cordova-android": "^12.0.1",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "cordova": {
     "platforms": [
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-inappbrowser": {}
+    }
   },
   "dependencies": {
     "cordova": "^12.0.0"
