--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,15 @@
   "include-component-in-tag": false,
   "include-v-in-tag": true,
   "pull-request-title-pattern": "release: ${version}",
-  "release-type": "node",
+  "release-type": "node", 
+  "config": {
+        "update": [
+            {
+                "path": "config.xml",
+                "updater": "semantic"
+            }
+        ]
+    }
   "packages": {
     ".": {
       "changelog-path": "CHANGELOG.md",
