--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,14 +3,7 @@
   "include-v-in-tag": true,
   "pull-request-title-pattern": "release: ${version}",
   "release-type": "node", 
-  "config": {
-        "update": [
-            {
-                "path": "config.xml",
-                "updater": "semantic"
-            }
-        ]
-  },
+  "extra-files": ["config.xml"],
   "packages": {
     ".": {
       "changelog-path": "CHANGELOG.md",
