chore: Update release-please-config.json

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,7 @@
   "extra-files": [
     {
       "type": "xml",
-      "path": "./config.xml",
+      "path": "config.xml",
       "xpath": "/widget/@version"
     }
   ],
