chore: Update release-please-config.json

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,7 @@
     {
       "type": "xml",
       "path": "config.xml",
-      "xpath": "/widget/@version"
+      "xpath": "//widget/@version"
     }
   ],
   "packages": {
