--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "author": "RedstonePfalz",
   "license": "Apache-2.0",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@material/web": "^1.0.0",
@@ -20,7 +20,8 @@
     "cordova-android": "^12.0.1",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "cordova": "^12.0.0"
   },
   "cordova": {
     "platforms": [
@@ -29,8 +30,5 @@
     "plugins": {
       "cordova-plugin-inappbrowser": {}
     }
-  },
-  "dependencies": {
-    "cordova": "^12.0.0"
   }
 }
