--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 100
     commit-message:
-      prefix: ""
+      prefix: "chore(deps):"
       include: "scope"
     labels:
       - "dependencies"
