--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "de.redstonepfalz.einkochen",
   "displayName": "Einkochen leicht gemacht",
-  "version": "1.0.0-pre.1",
+  "version": "1.4.5",
   "description": "Einkochen leicht gemacht",
   "main": "index.js",
   "scripts": {
